syntax = "proto3";

package rest_gateway_test.api.model;

import "google/protobuf/wrappers.proto";
import "scalapb/scalapb.proto";

option (scalapb.options) = {
    single_file: true
    lenses: true
    retain_source_code_info: true
    preserve_unknown_fields: false
    flat_package: true
    no_default_values_in_constructor: true
};

enum Color {
    UNKNOWN = 0;
    RED = 1;
    GREEN = 2;
    BLUE = 3;
}

message UUID {
    string value = 1;
}

message TestRequestA {
    int64 request_id = 1;
}

message TestResponseA {
    int64 request_id = 1;
    Color color = 2;
    UUID transaction_id = 3 [(scalapb.field).no_box = true];
}

message TestRequestB {
    int64 requestId = 1;
}

message TestResponseB {
    bool success = 1;
    int64 request_id = 2;
    string result = 3;
}

// in order to test different scenarios of path and request parameters
message GetMessageRequest {
    int32 message_id = 1;
    string user_id = 2;
}

message GetMessageResponse {
    string result = 1;
}

message GetMessageRequestV2 {
    message SubMessage {
      double sub_field1 = 1;
      float sub_field2 = 2;
    };
    int32 message_id = 1;
    string user_id = 2;
    SubMessage sub = 3;
}

message GetMessageRequestV3 {
    repeated int32 message_id = 1;
    Color color = 2;
}

message GetMessageRequestV4 {
    repeated Color colors = 1;
    repeated double doubles = 2;
    repeated float floats = 3;
    repeated int64 longs = 4;
    repeated bool booleans = 5;
}

message GetMessageRequestV5 {
    google.protobuf.Int32Value intValue = 1;
}

message GetMessageResponseV5 {
    google.protobuf.StringValue stringValue = 1;
    google.protobuf.BoolValue boolValue = 2;
    google.protobuf.Int32Value intValue = 3;
}

message GetMessageResponseV1 {
    message SubMessageV1 {
        string sub_field1 = 1;
    }
    map<string, SubMessageV1> map_object = 1;
    map<int32, string> map_object_1 = 2;
}
